update ta solutions

--- a/src/pages/ta-solutions.mdx
+++ b/src/pages/ta-solutions.mdx
@@ -240,7 +240,7 @@ mongodb_client.admin.command("ping")
 For additional support during the workshop:
 - **Technical Issues**: Check MongoDB Developer Community
 - **API Problems**: Refer to Voyage AI documentation
-- **General Questions**: Use the workshop Discord/Slack channel
+- **General Questions**: Use the workshop Slack channel: #ai4conference_25
 
 :::tip Pro Tip for TAs
 Keep this page bookmarked and use Ctrl/Cmd+F to quickly find specific solutions during the workshop. Remember to encourage learning through discovery rather than immediately providing answers!
@@ -248,4 +248,4 @@ Keep this page bookmarked and use Ctrl/Cmd+F to quickly find specific solutions 
 
 ---
 
-*Last updated: Workshop Solutions v1.0*
+*Last updated: Aug 11, 2025 - Michael Lynn
