fix page bounce error

--- a/src/pages/ta-solutions.mdx
+++ b/src/pages/ta-solutions.mdx
@@ -2,6 +2,7 @@
 title: 🔐 TA Solutions & Resources
 description: Secret page for Teaching Assistants with all workshop solutions and resources
 hide_title: false
+hide_table_of_contents: true
 ---
 
 import BrowserWindow from '@site/src/components/BrowserWindow';
@@ -10,6 +11,12 @@ import BrowserWindow from '@site/src/components/BrowserWindow';
 
 :::danger ⚠️ FOR TEACHING ASSISTANTS ONLY
 This page contains complete solutions for all workshop exercises. Please use responsibly and help participants learn by guiding them to discover solutions rather than providing direct answers.
+:::
+
+# Logistics
+:::note Location
+The workshop is in the MGM Grande in room 104 - 
+Michael's Mobile: (215) 866-6036
 :::
 
 ## 📖 Quick Access Navigation
@@ -238,7 +245,7 @@ mongodb_client.admin.command("ping")
 ## 📞 Support Contacts
 
 For additional support during the workshop:
-- **Technical Issues**: Check MongoDB Developer Community
+- **Technical Issues**: Check MongoDB Developer Community - Forums - Contact Apoorva/Michael Afterwards
 - **API Problems**: Refer to Voyage AI documentation
 - **General Questions**: Use the workshop Slack channel: #ai4conference_25
 
