fix links in ta

--- a/src/pages/ta-solutions.mdx
+++ b/src/pages/ta-solutions.mdx
@@ -150,20 +150,20 @@ store_chat_message(session_id, "agent", "text", answer)
 ## 🔗 Workshop Resources
 
 ### 📚 Documentation & Learning
-- **Workshop Documentation**: [mdb.link/ai4-docs](https://ai4-multimodal-agents-docs.vercel.app/)
-- **MongoDB Learn Course**: [mdb.link/ai4-badge](https://learn.mongodb.com/learn/course/ai-agents-with-voyage-ai-and-mongodb-atlas)
-- **Voyage AI Multimodal Guide**: [mdb.link/ai4-vlm](https://blog.voyageai.com/2024/11/12/voyage-multimodal-embedding/)
+- **Workshop Documentation**: [mdb.link/ai4-docs](https://mdb.link/ai4-docs)
+- **MongoDB Learn Course**: [mdb.link/ai4-badge](https://mdb.link/ai4-badge)
+- **Voyage AI Multimodal Guide**: [mdb.link/ai4-vlm](https://mdb.link/ai4-vlm)
 
 ### 🚀 Demo Applications
-- **Live Agent Demo**: [mdb.link/ai4-agent](https://voyage-multimodal-demo.vercel.app/?utm_campaign=ai4_workshop)
-- **Alternative Link**: [mdb.link/ai4](https://voyage-multimodal-demo.vercel.app/?utm_campaign=ai4_workshop)
+- **Live Agent Demo**: [mdb.link/ai4-agent](https://mdb.link/ai4-agent)
+- **Alternative Link**: [mdb.link/ai4](mdb.link/ai4)
 
 ### 💻 Code Repositories
-- **Demo Repository**: [mdb.link/ai4-demo](https://github.com/mongodb-developer/ai4-multimodal-agents-demo)
-- **Workshop Repository**: [mdb.link/ai4-workshop](https://github.com/mongodb-developer/ai4-multimodal-agents-workshop)
+- **Demo Repository**: [mdb.link/ai4-demo](https://mdb.link/ai4-demo)
+- **Workshop Repository**: [mdb.link/ai4-workshop](mdb.link/ai4-workshop)
 
 ### 📊 Feedback & Survey
-- **Workshop Survey**: [mdb.link/ai4-survey](https://forms.gle/RBGw1zY9FxL8N5fP7)
+- **Workshop Survey**: [mdb.link/ai4-survey](https://mdb.link/ai4-survey)
 
 ---
 
